Java 17 Upgrade
Issue-ID: POLICY-4669
Change-Id: I2a57a8366d3956a172a94c81ab950af179d4767b
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>